# claude-memory-light

./: .gitignore  Cargo.toml  DESIGN.md  PRODUCT.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
.omc/state/: agent-replay-1531f69b-d4fc-4d57-88dd-dcac603a1859.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json
.omc/state/sessions/1531f69b-d4fc-4d57-88dd-dcac603a1859/: hud-state.json  last-tool-error-state.json  pre-tool-advisory-throttle.json  subagent-tracking-state.json
commands/: cml.md
cpp/: CMakeLists.txt
cpp/src/: capture.cpp  curate.hpp  db.cpp  db.hpp  distill.cpp  embed.cpp  embed.hpp  forget.cpp  hint.cpp  hint.hpp  indexer.cpp  indexer.hpp  json.hpp  loops.cpp  loops.hpp  main.cpp  map.cpp  map.hpp  mapassets.S.in  mapbuild.cpp  noise.cpp  noise.hpp  paths.cpp  paths.hpp  report.cpp  search.cpp  search.hpp  selftest.cpp  transcript.cpp  transcript.hpp  unicode.hpp  utf8.hpp  vec.cpp  vec.hpp  wordpiece.cpp  wordpiece.hpp  work.cpp  work.hpp
cpp/src/selftest/: curate.cpp  embedding.cpp  filters.cpp  harness.hpp  map.cpp  ports.cpp
hooks/: hooks.json
skills/learning-loop/: SKILL.md
skills/memory-search/: SKILL.md
skills/wiki/: SKILL.md
src/: app.js  main.rs  map.html
